--- a/symfony/src/Custom/BookBundle/Resources/views/Book/index.html.twig
+++ b/symfony/src/Custom/BookBundle/Resources/views/Book/index.html.twig
@@ -1,49 +1,48 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Book list</h1>
-
-    <table class="records_list">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Name</th>
-                <th>Author</th>
-                <th>Language</th>
-                <th>Publisher</th>
-                <th>Summary</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for entity in entities %}
-            <tr>
-                <td><a href="{{ path('book_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.name }}</td>
-                <td>{{ entity.author }}</td>
-                <td>{{ entity.language }}</td>
-                <td>{{ entity.publisher }}</td>
-                <td>{{ entity.summary }}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('book_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('book_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-        <ul>
-        <li>
-            <a href="{{ path('book_new') }}">
+    <h1>Book list <span><a class="btn btn-primary btn-lg" href="{{ path('book_new') }}" rold="button">
                 Create a new entry
-            </a>
-        </li>
-    </ul>
+    </a></span></h1>
+
+    <div class="table-responsive"> 
+        <table class="records_list table table-striped table-bordered">
+            <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Author</th>
+                    <th>Language</th>
+                    <th>Publisher</th>
+                    <th>Summary</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for entity in entities %}
+                <tr>
+                    <td><a href="{{ path('book_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                    <td>{{ entity.name }}</td>
+                    <td>{{ entity.author }}</td>
+                    <td>{{ entity.language }}</td>
+                    <td>{{ entity.publisher }}</td>
+                    <td>{{ entity.summary }}</td>
+                    <td style="text-align: center; vertical-align: middle;">
+                    <ul style="list-style-type: none;">
+                        <li>
+                            <a class="btn btn-default btn-xs" href="{{ path('book_show', { 'id': entity.id }) }}">show</a>
+                        </li>
+                        <li style="margin-top: 10px;">
+                            <a class="btn btn-default btn-xs" href="{{ path('book_edit', { 'id': entity.id }) }}">edit</a>
+                        </li>
+                    </ul>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+        
+    
+
     {% endblock %}
