--- a/symfony/app/Resources/views/base.html.twig
+++ b/symfony/app/Resources/views/base.html.twig
@@ -3,11 +3,42 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            <link rel="stylesheet" type="text/css" href="{{asset('css/bootstrap.min.css')}}" />
+            <link rel="stylesheet" type="text/css" href="{{asset('css/bootstrap-theme.min.css')}}" />
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        
+
+        <div class="container">
+
+        <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="{{ path('book') }}">Book Inventory</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="{{ path('book') }}">Home</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+
+
+            {% block body %}{% endblock %}
+            {% block javascripts %}
+                <script type="text/javascript" src="{{asset('js/jquery-1.11.1.min.js')}}"></script>
+                <script type="text/javascript" src="{{asset('js/bootstrap.min.js')}}"></script>
+            {% endblock %}
+        </div>
     </body>
 </html>
