--- a/symfony/src/Custom/BookBundle/Resources/views/Book/show.html.twig
+++ b/symfony/src/Custom/BookBundle/Resources/views/Book/show.html.twig
@@ -3,46 +3,51 @@
 {% block body -%}
     <h1>Book</h1>
 
-    <table class="record_properties">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ entity.name }}</td>
-            </tr>
-            <tr>
-                <th>Author</th>
-                <td>{{ entity.author }}</td>
-            </tr>
-            <tr>
-                <th>Language</th>
-                <td>{{ entity.language }}</td>
-            </tr>
-            <tr>
-                <th>Publisher</th>
-                <td>{{ entity.publisher }}</td>
-            </tr>
-            <tr>
-                <th>Summary</th>
-                <td>{{ entity.summary }}</td>
-            </tr>
-        </tbody>
-    </table>
+    <div class="table-responsive">
+        <table class="record_properties table">
+            <tbody>
+                <tr>
+                    <th>Id</th>
+                    <td>{{ entity.id }}</td>
+                </tr>
+                <tr>
+                    <th>Name</th>
+                    <td>{{ entity.name }}</td>
+                </tr>
+                <tr>
+                    <th>Author</th>
+                    <td>{{ entity.author }}</td>
+                </tr>
+                <tr>
+                    <th>Language</th>
+                    <td>{{ entity.language }}</td>
+                </tr>
+                <tr>
+                    <th>Publisher</th>
+                    <td>{{ entity.publisher }}</td>
+                </tr>
+                <tr>
+                    <th>Summary</th>
+                    <td>{{ entity.summary }}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('book') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('book_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    
+    <a class="btn btn-primary btn-lg" href="{{ path('book') }}" rold="button">
+        Back to the list
+    </a>
+    
+    
+    <a class="btn btn-primary btn-lg" href="{{ path('book_edit', { 'id': entity.id }) }}" rold="button">
+        Edit
+    </a>
+    
+    <div style="margin-top: 20px;">
+    <div>
+
+    {{ form(delete_form) }}
+
+
 {% endblock %}
