--- a/symfony/src/Custom/BookBundle/Resources/views/Book/index.html.twig
+++ b/symfony/src/Custom/BookBundle/Resources/views/Book/index.html.twig
@@ -1,48 +1,59 @@
 {% extends '::base.html.twig' %}
 
 {% block body -%}
-    <h1>Book list <span><a class="btn btn-primary btn-lg" href="{{ path('book_new') }}" rold="button">
+    <h1>Book list {% if is_granted('ROLE_ADMIN') %}<span><a class="btn btn-primary btn-lg" href="{{ path('book_new') }}"
+                                                            rold="button">
                 Create a new entry
-    </a></span></h1>
+            </a></span>{% endif %}</h1>
 
-    <div class="table-responsive"> 
+    <div class="table-responsive">
         <table class="records_list table table-striped table-bordered">
             <thead>
-                <tr>
+            <tr>
+                {% if is_granted('ROLE_ADMIN') %}
                     <th>Id</th>
-                    <th>Name</th>
-                    <th>Author</th>
-                    <th>Language</th>
-                    <th>Publisher</th>
-                    <th>Summary</th>
+                {% endif %}
+                <th>Name</th>
+                <th>Author</th>
+                <th>Language</th>
+                <th>Publisher</th>
+                <th>Summary</th>
+                {% if is_granted('ROLE_ADMIN') %}
                     <th>Actions</th>
-                </tr>
+                {% endif %}
+            </tr>
             </thead>
             <tbody>
             {% for entity in entities %}
                 <tr>
-                    <td><a href="{{ path('book_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <td><a href="{{ path('book_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                    {% endif %}
                     <td>{{ entity.name }}</td>
                     <td>{{ entity.author }}</td>
                     <td>{{ entity.language }}</td>
                     <td>{{ entity.publisher }}</td>
                     <td>{{ entity.summary }}</td>
-                    <td style="text-align: center; vertical-align: middle;">
-                    <ul style="list-style-type: none;">
-                        <li>
-                            <a class="btn btn-default btn-xs" href="{{ path('book_show', { 'id': entity.id }) }}">show</a>
-                        </li>
-                        <li style="margin-top: 10px;">
-                            <a class="btn btn-default btn-xs" href="{{ path('book_edit', { 'id': entity.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                    </td>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <td style="text-align: center; vertical-align: middle;">
+                            <ul style="list-style-type: none;">
+                                <li>
+                                    <a class="btn btn-default btn-xs"
+                                       href="{{ path('book_show', { 'id': entity.id }) }}">show</a>
+                                </li>
+                                <li style="margin-top: 10px;">
+                                    <a class="btn btn-default btn-xs"
+                                       href="{{ path('book_edit', { 'id': entity.id }) }}">edit</a>
+                                </li>
+                            </ul>
+                        </td>
+                    {% endif %}
                 </tr>
             {% endfor %}
             </tbody>
         </table>
     </div>
-        
-    
 
-    {% endblock %}
+
+
+{% endblock %}
